feat(guards): dispatch the complete query response as action payload

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
 	"name": "ngrx-normalizr-crud",
-	"version": "0.0.4",
-	"description": "CRUD reducer, actions, selectors and effects for ngrx-normalizr states",
+	"version": "0.0.5",
+	"description":
+		"CRUD reducer, actions, selectors and effects for ngrx-normalizr states",
 	"main": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"scripts": {
@@ -9,7 +10,8 @@
 		"prepublishOnly": "yarn aot",
 		"tsc": "rm -rf ./dist && tsc",
 		"aot": "rm -rf ./dist && ./node_modules/.bin/ngc",
-		"docs": "rm -rf ./docs && typedoc --out ./docs --name ngrx-normalizr --readme ./README.md --module commonjs --target ES5 --theme default && yarn docs-github",
+		"docs":
+			"rm -rf ./docs && typedoc --out ./docs --name ngrx-normalizr --readme ./README.md --module commonjs --target ES5 --theme default && yarn docs-github",
 		"docs-github": "touch ./docs/.nojekyll",
 		"test": "./node_modules/.bin/karma start karma-ci.conf.js"
 	},
