--- a/package.json
+++ b/package.json
@@ -1,58 +1,60 @@
 {
-	"name": "ngrx-normalizr-crud",
-	"version": "0.0.10",
-	"description": "CRUD reducer, actions, selectors and effects for ngrx-normalizr states",
-	"main": "./dist/index.js",
-	"types": "./dist/index.d.ts",
-	"scripts": {
-		"watch": "./node_modules/.bin/karma start",
-		"prepublishOnly": "yarn aot",
-		"tsc": "rm -rf ./dist && tsc",
-		"aot": "rm -rf ./dist && ./node_modules/.bin/ngc",
-		"docs": "rm -rf ./docs && typedoc --out ./docs --name ngrx-normalizr --readme ./README.md --module commonjs --target ES5 --theme default && yarn docs-github",
-		"docs-github": "touch ./docs/.nojekyll",
-		"test": "./node_modules/.bin/karma start karma-ci.conf.js"
-	},
-	"readme": "README.md",
-	"repository": "https://github.com/michaelkrone/ngrx-normalizr-crud",
-	"author": "Michael Krone <michael.krone@outlook.com>",
-	"license": "MIT",
-	"peerDependencies": {
-		"@ngrx/effects": "^4.0.5",
-		"@ngrx/store": "^4.0.3",
-		"ngrx-normalizr": "^2.0.0"
-	},
-	"dependencies": {},
-	"devDependencies": {
-		"@angular/common": "^4.4.6",
-		"@angular/compiler": "^4.4.4",
-		"@angular/compiler-cli": "^4.4.4",
-		"@angular/core": "^4.4.4",
-		"@angular/router": "^4.4.4",
-		"@ngrx/effects": "^4.0.5",
-		"@ngrx/store": "^4.0.3",
-		"@types/jasmine": "^2.5.53",
-		"@types/jasminewd2": "^2.0.2",
-		"@types/node": "^8.0.24",
-		"@types/should": "^8.3.0",
-		"codelyzer": "^3.2.2",
-		"jasmine-core": "^2.7.0",
-		"jasmine-spec-reporter": "^4.2.1",
-		"karma": "^1.7.0",
-		"karma-chrome-launcher": "^2.2.0",
-		"karma-cli": "^1.0.1",
-		"karma-coverage-istanbul-reporter": "^1.3.0",
-		"karma-firefox-launcher": "^1.0.1",
-		"karma-jasmine": "^1.1.0",
-		"karma-jasmine-html-reporter": "^0.2.2",
-		"karma-typescript": "^3.0.5",
-		"ngrx-normalizr": "^1.0.3",
-		"normalizr": "^3.2.3",
-		"rxjs": "^5.4.3",
-		"should": "^11.2.1",
-		"ts-node": "^3.3.0",
-		"tslint": "^5.6.0",
-		"typescript": "^2.4.2",
-		"zone.js": "^0.8.16"
-	}
+  "name": "ngrx-normalizr-crud",
+  "version": "0.0.11",
+  "description":
+    "CRUD reducer, actions, selectors and effects for ngrx-normalizr states",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "scripts": {
+    "watch": "./node_modules/.bin/karma start",
+    "prepublishOnly": "yarn aot",
+    "tsc": "rm -rf ./dist && tsc",
+    "aot": "rm -rf ./dist && ./node_modules/.bin/ngc",
+    "docs":
+      "rm -rf ./docs && typedoc --out ./docs --name ngrx-normalizr --readme ./README.md --module commonjs --target ES5 --theme default && yarn docs-github",
+    "docs-github": "touch ./docs/.nojekyll",
+    "test": "./node_modules/.bin/karma start karma-ci.conf.js"
+  },
+  "readme": "README.md",
+  "repository": "https://github.com/michaelkrone/ngrx-normalizr-crud",
+  "author": "Michael Krone <michael.krone@outlook.com>",
+  "license": "MIT",
+  "peerDependencies": {
+    "@ngrx/effects": "^4.0.5",
+    "@ngrx/store": "^4.0.3",
+    "ngrx-normalizr": "^2.0.0"
+  },
+  "dependencies": {},
+  "devDependencies": {
+    "@angular/common": "^4.4.6",
+    "@angular/compiler": "^4.4.4",
+    "@angular/compiler-cli": "^4.4.4",
+    "@angular/core": "^4.4.4",
+    "@angular/router": "^4.4.4",
+    "@ngrx/effects": "^4.0.5",
+    "@ngrx/store": "^4.0.3",
+    "@types/jasmine": "^2.5.53",
+    "@types/jasminewd2": "^2.0.2",
+    "@types/node": "^8.0.24",
+    "@types/should": "^8.3.0",
+    "codelyzer": "^3.2.2",
+    "jasmine-core": "^2.7.0",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-cli": "^1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.3.0",
+    "karma-firefox-launcher": "^1.0.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-typescript": "^3.0.5",
+    "ngrx-normalizr": "^1.0.3",
+    "normalizr": "^3.2.3",
+    "rxjs": "^5.4.3",
+    "should": "^11.2.1",
+    "ts-node": "^3.3.0",
+    "tslint": "^5.6.0",
+    "typescript": "^2.4.2",
+    "zone.js": "^0.8.16"
+  }
 }
